Convert project to use CMake
wsp3dovm/Makefile is now auto-generated

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 # nix/nux stuff
 *.o
 wsp3dovm/wsp3dovm
+build_cuboid/build_cuboid
 
 
 ## Ignore Visual Studio temporary files, build results, and
@@ -193,3 +194,16 @@ FakesAssemblies/
 *.face
 *.node
 *.zip
+
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
