Clean up wasm function name

--- a/wsp3dovm/CMakeLists.txt
+++ b/wsp3dovm/CMakeLists.txt
@@ -162,6 +162,6 @@ endif()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE "${ADDITIONAL_LIBRARY_DEPENDENCIES}")
 if(EMSCRIPTEN)
-    set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-O3 -s USE_BOOST_HEADERS=1" LINK_FLAGS "-O3 -s USE_BOOST_HEADERS=1 -s EXPORT_ES6=1 -s MODULARIZE=1 -s ALLOW_MEMORY_GROWTH=1 --bind")
+    set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-O3 -s USE_BOOST_HEADERS=1" LINK_FLAGS "-O3 -s USE_BOOST_HEADERS=1 -s EXPORT_ES6=1 -s USE_ES6_IMPORT_META=0 -s MODULARIZE=1 -s ALLOW_MEMORY_GROWTH=1 --bind")
 endif()
 
